Convert pages to Jekyll

--- a/realestate.html
+++ b/realestate.html
@@ -1,44 +1,29 @@
-<?php header('Content-type: text/html; charset=UTF-8'); ?>
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-	<title>David Tang | Real Estate Photography</title>
-	<meta name="description" content="Real Estate Photography">
-	<?php require_once('includes/header.php'); ?>
-	<script type="text/javascript" async>
-	var slidesContent = [{
-		image: 'photos/realestate/01.jpg',
-		title: '<h2>Backlundagatan</h2> Malmoe, Sweden'
-	}, {
-		image: 'photos/realestate/02.jpg',
-		title: '<h2>Modern Home Condo</h2> Bangkok, Thailand'
-	}, {
-		image: 'photos/realestate/03.jpg',
-		title: '<h2>The Hideaway</h2> Kuiburi, Thailand'
-	}, {
-		image: 'photos/realestate/04.jpg',
-		title: '<h2>Danskavagen</h2> Malmoe, Thailand'
-	}, {
-		image: 'photos/realestate/05.jpg',
-		title: '<h2>Baan Chao Phraya</h2> Bangkok, Thailand'
-	}, {
-		image: 'photos/realestate/06.jpg',
-		title: '<h2>FourWings Residence</h2> Bangkok, Thailand'
-	}, {
-		image: 'photos/realestate/07.jpg',
-		title: '<h2>FourWings Residence</h2> Bangkok, Thailand'
-	}]
-	</script>
-</head>
+---
+layout: default
+title: Real Estate Photography
+---
 
-<body>
-
-	<?php
-	require_once('includes/menu.php');
-	require_once('includes/footer-gallery.php');
-	require_once('includes/copyright.php');
-	require_once('includes/footer-scripts.php');
-	?>
-
-</body>
-</html>
+<script type="text/javascript" async>
+var slidesContent = [{
+	image: 'photos/realestate/01.jpg',
+	title: '<h2>Backlundagatan</h2> Malmoe, Sweden'
+}, {
+	image: 'photos/realestate/02.jpg',
+	title: '<h2>Modern Home Condo</h2> Bangkok, Thailand'
+}, {
+	image: 'photos/realestate/03.jpg',
+	title: '<h2>The Hideaway</h2> Kuiburi, Thailand'
+}, {
+	image: 'photos/realestate/04.jpg',
+	title: '<h2>Danskavagen</h2> Malmoe, Thailand'
+}, {
+	image: 'photos/realestate/05.jpg',
+	title: '<h2>Baan Chao Phraya</h2> Bangkok, Thailand'
+}, {
+	image: 'photos/realestate/06.jpg',
+	title: '<h2>FourWings Residence</h2> Bangkok, Thailand'
+}, {
+	image: 'photos/realestate/07.jpg',
+	title: '<h2>FourWings Residence</h2> Bangkok, Thailand'
+}]
+</script>
