--- a/travel.html
+++ b/travel.html
@@ -1,62 +1,47 @@
-<?php header('Content-type: text/html; charset=UTF-8'); ?>
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-	<title>David Tang | Travel Photography</title>
-	<meta name="description" content="Travel Photographyy">
-	<?php require_once('includes/header.php'); ?>
-	<script type="text/javascript" async>
-	var slidesContent = [{
-		image: 'photos/travel/01.jpg',
-		title: '<h2>Wat Suthat Exterior</h2> Bangkok, Thailand'
-	}, {
-		image: 'photos/travel/02.jpg',
-		title: '<h2>Wat Suthat Interior</h2> Bangkok, Thailand'
-	}, {
-		image: 'photos/travel/03.jpg',
-		title: '<h2>Mena Crisologo Street</h2> Vigan, Philippines'
-	}, {
-		image: 'photos/travel/04.jpg',
-		title: '<h2>Sultan Ahmed Mosque</h2> Istanbul, Turkey'
-	}, {
-		image: 'photos/travel/05.jpg',
-		title: '<h2>Rice Terraces</h2> Batad, Philippines'
-	}, {
-		image: 'photos/travel/06.jpg',
-		title: '<h2>Ricefield Sunset</h2> Baan Kok Sah-at, Thailand'
-	}, {
-		image: 'photos/travel/07.jpg',
-		title: '<h2>Yaowarat</h2> Bangkok, Thailand'
-	}, {
-		image: 'photos/travel/08.jpg',
-		title: '<h2>Bagan Sunrise</h2> Bagan, Myanmar'
-	}, {
-		image: 'photos/travel/09.jpg',
-		title: '<h2>Monastery</h2> Mount Popa, Myanmar'
-	}, {
-		image: 'photos/travel/10.jpg',
-		title: '<h2>Speedboat</h2> Koh Pi Pi, Thailand'
-	}, {
-		image: 'photos/travel/11.jpg',
-		title: '<h2>Bagan Temples</h2> Bagan, Myanmar'
-	}, {
-		image: 'photos/travel/12.jpg',
-		title: '<h2>Bangkok Skyline</h2> Bangkok, Thailand'
-	}, {
-		image: 'photos/travel/13.jpg',
-		title: '<h2>Fog Surround Hills</h2> Muurla, Finland'
-	}]
-	</script>
-</head>
+---
+layout: default
+title: Travel Photography
+---
 
-<body>
-
-	<?php
-	require_once('includes/menu.php');
-	require_once('includes/footer-gallery.php');
-	require_once('includes/copyright.php');
-	require_once('includes/footer-scripts.php');
-	?>
-
-</body>
-</html>
+<script type="text/javascript" async>
+var slidesContent = [{
+	image: 'photos/travel/01.jpg',
+	title: '<h2>Wat Suthat Exterior</h2> Bangkok, Thailand'
+}, {
+	image: 'photos/travel/02.jpg',
+	title: '<h2>Wat Suthat Interior</h2> Bangkok, Thailand'
+}, {
+	image: 'photos/travel/03.jpg',
+	title: '<h2>Mena Crisologo Street</h2> Vigan, Philippines'
+}, {
+	image: 'photos/travel/04.jpg',
+	title: '<h2>Sultan Ahmed Mosque</h2> Istanbul, Turkey'
+}, {
+	image: 'photos/travel/05.jpg',
+	title: '<h2>Rice Terraces</h2> Batad, Philippines'
+}, {
+	image: 'photos/travel/06.jpg',
+	title: '<h2>Ricefield Sunset</h2> Baan Kok Sah-at, Thailand'
+}, {
+	image: 'photos/travel/07.jpg',
+	title: '<h2>Yaowarat</h2> Bangkok, Thailand'
+}, {
+	image: 'photos/travel/08.jpg',
+	title: '<h2>Bagan Sunrise</h2> Bagan, Myanmar'
+}, {
+	image: 'photos/travel/09.jpg',
+	title: '<h2>Monastery</h2> Mount Popa, Myanmar'
+}, {
+	image: 'photos/travel/10.jpg',
+	title: '<h2>Speedboat</h2> Koh Pi Pi, Thailand'
+}, {
+	image: 'photos/travel/11.jpg',
+	title: '<h2>Bagan Temples</h2> Bagan, Myanmar'
+}, {
+	image: 'photos/travel/12.jpg',
+	title: '<h2>Bangkok Skyline</h2> Bangkok, Thailand'
+}, {
+	image: 'photos/travel/13.jpg',
+	title: '<h2>Fog Surround Hills</h2> Muurla, Finland'
+}]
+</script>
