--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
-<?php header('Content-type: text/html; charset=UTF-8'); ?>
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-	<title>Portfolio of David Tang</title>
-	<meta name="description" content="Graphic Design &amp; Photography">
-	<?php require_once('includes/header.php'); ?>
-	<script type="text/javascript" async>
-	var slidesContent = [{
-		image: 'photos/splash.jpg',
-		title: 'Homepage'
-	}]
-	</script>
-</head>
+---
+layout: default
+title: Homepage
+---
 
-<body>
-
-	<?php
-	require_once('includes/menu.php');
-	require_once('includes/copyright.php');
-	require_once('includes/footer-scripts.php');
-	?>
-
-</body>
-</html>
+<style type="text/css">#footer {display: none;}</style>
+<script type="text/javascript" async>
+var slidesContent = [{
+	image: 'photos/splash.jpg',
+	title: 'Homepage'
+}]
+</script>
