Back to pretty permalinks

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Homepage
 <style type="text/css">#footer {display: none;}</style>
 <script type="text/javascript" async>
 var slidesContent = [{
-	image: 'photos/splash.jpg',
+	image: '/photos/splash.jpg',
 	title: 'Homepage'
 }]
 </script>
