--- a/realestate.html
+++ b/realestate.html
@@ -5,25 +5,25 @@ title: Real Estate Photography
 
 <script type="text/javascript" async>
 var slidesContent = [{
-	image: 'photos/realestate/01.jpg',
+	image: '/photos/realestate/01.jpg',
 	title: '<h2>Backlundagatan</h2> Malmoe, Sweden'
 }, {
-	image: 'photos/realestate/02.jpg',
+	image: '/photos/realestate/02.jpg',
 	title: '<h2>Modern Home Condo</h2> Bangkok, Thailand'
 }, {
-	image: 'photos/realestate/03.jpg',
+	image: '/photos/realestate/03.jpg',
 	title: '<h2>The Hideaway</h2> Kuiburi, Thailand'
 }, {
-	image: 'photos/realestate/04.jpg',
+	image: '/photos/realestate/04.jpg',
 	title: '<h2>Danskavagen</h2> Malmoe, Thailand'
 }, {
-	image: 'photos/realestate/05.jpg',
+	image: '/photos/realestate/05.jpg',
 	title: '<h2>Baan Chao Phraya</h2> Bangkok, Thailand'
 }, {
-	image: 'photos/realestate/06.jpg',
+	image: '/photos/realestate/06.jpg',
 	title: '<h2>FourWings Residence</h2> Bangkok, Thailand'
 }, {
-	image: 'photos/realestate/07.jpg',
+	image: '/photos/realestate/07.jpg',
 	title: '<h2>FourWings Residence</h2> Bangkok, Thailand'
 }]
 </script>
