Attempt to fix Jekyll paths (see issue #3)

--- a/web.html
+++ b/web.html
@@ -5,13 +5,13 @@ title: Web Design
 
 <script type="text/javascript" async>
 var slidesContent = [{
-	image: '/photos/web/01.jpg',
+	image: '{{ site.baseurl }}/photos/web/01.jpg',
 	title: '<h2>Amada</h2> Complete website design'
 }, {
-	image: '/photos/web/02.jpg',
+	image: '{{ site.baseurl }}/photos/web/02.jpg',
 	title: '<h2>Asia Brewery Co Ltd</h2> Complete website design'
 }, {
-	image: '/photos/web/03.jpg',
+	image: '{{ site.baseurl }}/photos/web/03.jpg',
 	title: '<h2>Tronica</h2> Complete Wordpress Theme'
 }]
 </script>
