Update Print and Web content
Images and blurbs updated.

--- a/web.html
+++ b/web.html
@@ -9,9 +9,12 @@ var slidesContent = [{
 	title: '<h2>Amada</h2> Complete website design'
 }, {
 	image: '{{ site.baseurl }}/photos/web/02.jpg',
-	title: '<h2>Asia Brewery Co Ltd</h2> Complete website design'
+	title: '<h2>Expique</h2> Wordpress theme redesign'
 }, {
 	image: '{{ site.baseurl }}/photos/web/03.jpg',
-	title: '<h2>Tronica</h2> Complete Wordpress Theme'
+	title: '<h2>Tronica</h2> Complete Wordpress theme'
+}, {
+	image: '{{ site.baseurl }}/photos/web/04.jpg',
+	title: '<h2>Asia Brewery Co Ltd</h2> Complete website design'
 }]
 </script>
