--- a/print.html
+++ b/print.html
@@ -12,18 +12,21 @@ var slidesContent = [{
 	title: '<h2>Lamination Thailand</h2> Presentation folder design and product photography'
 }, {
 	image: '{{ site.baseurl }}/photos/print/03.jpg',
-	title: '<h2>Asian Design House</h2> Full catalog design and product photography'
+	title: '<h2>BBQ Sandwich King</h2> Poster and logo design including photography'
 }, {
 	image: '{{ site.baseurl }}/photos/print/04.jpg',
-	title: '<h2>The HideAway</h2> Design of promotional materials and photography'
+	title: '<h2>Asian Design House</h2> Full catalog design and product photography'
 }, {
 	image: '{{ site.baseurl }}/photos/print/05.jpg',
-	title: '<h2>Queensland Hotel Assoc.</h2> Event invitation and dining menu design'
+	title: '<h2>The HideAway</h2> Design of promotional materials and photography'
 }, {
 	image: '{{ site.baseurl }}/photos/print/06.jpg',
-	title: '<h2>Royboy</h2> Brochure and order form design for postcards'
+	title: '<h2>Queensland Hotel Assoc.</h2> Event invitation and dining menu design'
 }, {
 	image: '{{ site.baseurl }}/photos/print/07.jpg',
+	title: '<h2>Royboy</h2> Brochure and order form design for postcards'
+}, {
+	image: '{{ site.baseurl }}/photos/print/08.jpg',
 	title: '<h2>Bell Wealth Management</h2> Stationery design for wealth management company'
 }]
 </script>
